--- a/environment.yaml
+++ b/environment.yaml
@@ -3,7 +3,7 @@ channels:
   - pytorch
   - defaults
 dependencies:
-  - python=3.8.13
+  - python=3.9
   - pytorch=1.12.0=py3.8_cuda11.3_cudnn8.3.2_0
   - pytorch-mutex=1.0=cuda
   - pip:
@@ -12,3 +12,4 @@ dependencies:
     - tensorboard==2.9.1
     - datasets
     - transformers==4.24.0
+    - diffusers==v0.7.2
