--- a/configs/opentext_100_self_conditional_conditioned/openwebtext_100_self_logits_projection_zeros.json
+++ b/configs/opentext_100_self_conditional_conditioned/openwebtext_100_self_logits_projection_zeros.json
@@ -7,8 +7,8 @@
 	"learning_rate": 3e-5,
 	"weight_decay": 0.01,
 	"num_warmup_steps": 2000,
-	"tokenized_data_path": "/net/nfs.cirrascale/s2-research/rabeehk/simplex-diffusion/processed_data/openwebtext_100",
-	"output_dir": "/net/nfs.cirrascale/s2-research/rabeehk/outputs/simplex/openwebtext_100_conditional_5k_train_2.5k_inference_self_logits_projection_zeros_conditioned",
+	"tokenized_data_path": "/net/nfs/allennlp/rabeehk/simplex-diffusion/processed_data/openwebtext_100",
+	"output_dir": "/net/nfs/allennlp/rabeehk/outputs/simplex/openwebtext_100_conditional_5k_train_2.5k_inference_self_logits_projection_zeros_conditioned",
 	"checkpointing_steps": 1000,
 	"max_seq_length": 100,
 	"simplex_value": 5.0,
