--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# hamish folders
+generation_sweep
+opentext_ul2_objective_lr_1e-4_length_256_with_self_condition_logits_addition
+checkpoint-88000
