--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,135 @@
+absl-py==2.1.0
 accelerate==0.26.1
+aiofiles==23.2.1
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.6.0
+anyio==4.3.0
+attrs==23.2.0
 bert-score==0.3.12
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
+datasets==2.18.0
 diffusers==0.17.1
+dill==0.3.8
 einops==0.6.1
 evaluate==0.4.0
+faiss-cpu==1.8.0
+fastapi==0.110.1
+ffmpy==0.3.2
+filelock==3.13.4
+flash_attn==2.5.7
+fonttools==4.51.0
+frozenlist==1.4.1
+fsspec==2024.2.0
+google-auth==2.29.0
+google-auth-oauthlib==1.0.0
+gradio==3.35.2
+gradio_client==0.15.1
+grpcio==1.62.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.22.2
+idna==3.7
+importlib_metadata==7.1.0
+Jinja2==3.1.3
+joblib==1.4.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+linkify-it-py==2.0.3
+lxml==5.2.1
+Markdown==3.6
+markdown-it-py==2.2.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
 mauve-text==0.3.0
-rouge-score==0.1.2
+mdit-py-plugins==0.3.3
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+networkx==3.3
+ninja==1.11.1.1
+nltk==3.8.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
+orjson==3.10.1
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+portalocker==2.8.2
+protobuf==5.26.1
+psutil==5.9.8
+pyarrow==15.0.2
+pyarrow-hotfix==0.6
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.7.0
+pydantic_core==2.18.1
+pydub==0.25.1
+Pygments==2.17.2
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.34.0
+regex==2024.4.16
+requests==2.31.0
+requests-oauthlib==2.0.0
+responses==0.18.0
+rouge_score==0.1.2
+rpds-py==0.18.0
+rsa==4.9
 sacrebleu==2.3.1
 sacremoses==0.0.53
+safetensors==0.4.3
+scikit-learn==1.4.2
+scipy==1.13.0
+semantic-version==2.10.0
+sentencepiece==0.2.0
+setuptools==69.5.1
+six==1.16.0
+sniffio==1.3.1
+starlette==0.37.2
+sympy==1.12
+tabulate==0.9.0
 tensorboard==2.13.0
-gradio==3.35.2
+tensorboard-data-server==0.7.2
+threadpoolctl==3.4.0
+tokenizers==0.15.2
+toolz==0.12.1
+torch==2.2.2
+tqdm==4.66.2
 transformers==4.37.1
-flash-attn
+typing_extensions==4.11.0
+tzdata==2024.1
+uc-micro-py==1.0.3
+urllib3==2.2.1
+uvicorn==0.29.0
+websockets==11.0.3
+Werkzeug==3.0.2
+wheel==0.43.0
+xxhash==3.4.1
+yarl==1.9.4
+zipp==3.18.1
