--- a/environment.yml
+++ b/environment.yml
@@ -176,7 +176,7 @@ dependencies:
       - tzdata==2024.1
       - uvicorn==0.29.0
       - uvloop==0.19.0
-      - vllm==0.4.0.post1
+      - vllm==0.3.1
       - watchfiles==0.21.0
       - websockets==12.0
       - xformers==0.0.23.post1
