--- a/environment.yml
+++ b/environment.yml
@@ -173,6 +173,8 @@ dependencies:
       - tokenizers==0.15.2
       - tqdm==4.66.2
       - transformers==4.37.0
+      - --extra-index-url https://download.pytorch.org/whl/cu121
+      - torch==2.1.2+cu121
       - tzdata==2024.1
       - uvicorn==0.29.0
       - uvloop==0.19.0
