--- a/environment.yml
+++ b/environment.yml
@@ -142,6 +142,7 @@ dependencies:
       - outlines==0.0.34
       - packaging==24.0
       - pandas==2.2.2
+      - peft==0.10.0
       - prometheus-client==0.20.0
       - protobuf==5.26.1
       - psutil==5.9.8
